refactor: one read-terminal normalization point + executable fold laws (#276)
* refactor(core,internal): one read-terminal normalization point + the law suites

Item 3 — the eager read terminals (toList / toListIndexed / count / exists)
now route through a single private visitFocuses normalization: a null root
focuses nothing on every optic shape, a Lens (which includes every
Iso-rooted telescope) has exactly one focus whose value may be null, an
Affine has zero or one, and a composed traversal walks its visitor. The
per-terminal Lens/Affine instanceof fast paths this replaces were each a
hand-maintained copy of the null table — the two shipped divergences
(#274's exists NPE, toListIndexed's [Indexed[0, null]] vs []) were both
one terminal's copy drifting. read/find keep their fast paths: they pull a
lazy head, and their shortcuts carry real dispatch savings on the
codegen-holder hot path. toList now returns an unmodifiable list on every
shape (previously mutable on the composed-traversal branch only).

Item 1 — the laws become executable:
- internal: FoldLaws.assertFoldLaws pins Fold's documented contract ("both
  primitives enumerate the same focuses in the same order" + short-circuit
  reporting) and OpticLawsTest applies it to every optic — all single-focus
  shapes (null and miss cases included), all four container traversals
  (null/empty included), eachOptional (null/empty/present), composed and
  filtered traversals.
- core: ReadTerminalConsistencyTest asserts the cross-terminal laws
  (count == toList.size == toListIndexed.size; exists == count > 0;
  indexed mirrors toList positionally; find-present implies exists) over
  the full shape × input matrix — Iso roots, lens paths, traversals,
  affines, filters, and the split container form, each against null roots,
  null focuses, null containers, and empties. This suite would have caught
  both prior divergences before they shipped.

Item 2, downsized honestly — the inspection proposed deleting firstHopName
a